--- a/configuracion.json
+++ b/configuracion.json
@@ -31,6 +31,38 @@
 "tipo": "CFG_PRIVACIDAD",
 "icono": "e91b",
 "contenido": ""
+},
+  {
+"celda": "CELCFG",
+"titulo": "Favoritos",
+"subtitulo": "Encuentra las notas que más te han interesado.",
+"tipo": "CFG_FAVORITOS",
+"icono": "f02e",
+"contenido": ""
+},
+{
+"celda": "CELCFG",
+"titulo": "Aviso de privacidad",
+"subtitulo": "Revisa nuestro aviso de privacidad.",
+"tipo": "CFG_PRIVACIDAD",
+"icono": "e91b",
+"contenido": ""
+},
+  {
+"celda": "CELCFG",
+"titulo": "Favoritos2",
+"subtitulo": "Encuentra las notas que más te han interesado.",
+"tipo": "CFG_FAVORITOS",
+"icono": "f02e",
+"contenido": ""
+},
+{
+"celda": "CELCFG",
+"titulo": "Aviso de privacidad2",
+"subtitulo": "Revisa nuestro aviso de privacidad.",
+"tipo": "CFG_PRIVACIDAD",
+"icono": "e91b",
+"contenido": ""
 }
 ]
 }
