--- a/configuracion.json
+++ b/configuracion.json
@@ -13,7 +13,7 @@
 "titulo": "Aviso de privacidad",
 "subtitulo": "Revisa nuestro aviso de privacidad.",
 "tipo": "CFG_PRIVACIDAD",
-"icono": "e91b",
+"icono": "f023",
 "contenido": ""
 },
   {
@@ -29,7 +29,7 @@
 "titulo": "Aviso de privacidad2",
 "subtitulo": "Revisa nuestro aviso de privacidad.",
 "tipo": "CFG_PRIVACIDAD",
-"icono": "e91b",
+"icono": "f023",
 "contenido": ""
 },
   {
@@ -45,7 +45,7 @@
 "titulo": "Aviso de privacidad",
 "subtitulo": "Revisa nuestro aviso de privacidad.",
 "tipo": "CFG_PRIVACIDAD",
-"icono": "e91b",
+"icono": "f023",
 "contenido": ""
 },
   {
@@ -61,7 +61,7 @@
 "titulo": "Aviso de privacidad2",
 "subtitulo": "Revisa nuestro aviso de privacidad.",
 "tipo": "CFG_PRIVACIDAD",
-"icono": "e91b",
+"icono": "f023",
 "contenido": ""
 }
 ]
